--- a/config/integration/apps.yml
+++ b/config/integration/apps.yml
@@ -30,35 +30,36 @@ dialogflow:
   action: /dialogflow
   hook_type: inbox
   allow_multiple_hooks: true
-  settings_json_schema:  {
-    "type": "object",
-    "properties": {
-      "project_id": { "type": "string" },
-      "credentials": { "type": "object" }
-    },
-    "required": ["project_id", "credentials"],
-    "additionalProperties": false
-  }
-  settings_form_schema: [
+  settings_json_schema:
     {
-      "label": "Dialogflow Project ID",
-      "type": "text",
-      "name": "project_id",
-      "validation": "required",
-      "validationName": 'Project Id',
-    },
-    {
-      "label": "Dialogflow Project Key File",
-      "type": "textarea",
-      "name": "credentials",
-      "validation": "required|JSON",
-      "validationName": 'Credentials',
-      "validation-messages": {
-          "JSON": "Invalid JSON",
-          "required": "Credentials is required"
-      }
+      'type': 'object',
+      'properties':
+        {
+          'project_id': { 'type': 'string' },
+          'credentials': { 'type': 'object' },
+        },
+      'required': ['project_id', 'credentials'],
+      'additionalProperties': false,
     }
-  ]
+  settings_form_schema:
+    [
+      {
+        'label': 'Dialogflow Project ID',
+        'type': 'text',
+        'name': 'project_id',
+        'validation': 'required',
+        'validationName': 'Project Id',
+      },
+      {
+        'label': 'Dialogflow Project Key File',
+        'type': 'textarea',
+        'name': 'credentials',
+        'validation': 'required|JSON',
+        'validationName': 'Credentials',
+        'validation-messages':
+          { 'JSON': 'Invalid JSON', 'required': 'Credentials is required' },
+      },
+    ]
   visible_properties: ['project_id']
 dyte:
   id: dyte
@@ -67,27 +68,68 @@ dyte:
   action: /dyte
   hook_type: account
   allow_multiple_hooks: false
-  settings_json_schema: {
-    "type": "object",
-    "properties": {
-        "api_key": { "type": "string" },
-        "organization_id": { "type": "string" },
+  settings_json_schema:
+    {
+      'type': 'object',
+      'properties':
+        {
+          'api_key': { 'type': 'string' },
+          'organization_id': { 'type': 'string' },
+        },
+      'required': ['api_key', 'organization_id'],
+      'additionalProperties': false,
+    }
+  settings_form_schema:
+    [
+      {
+        'label': 'Organization ID',
+        'type': 'text',
+        'name': 'organization_id',
+        'validation': 'required',
       },
-    "required": ["api_key", "organization_id"],
-    "additionalProperties": false,
-  }
-  settings_form_schema: [
+      {
+        'label': 'API Key',
+        'type': 'text',
+        'name': 'api_key',
+        'validation': 'required',
+      },
+    ]
+  visible_properties: ['organization_id']
+google_translate:
+  id: google_translate
+  logo: googletranslate.png
+  i18n_key: google_translate
+  action: /google_translate
+  hook_type: account
+  allow_multiple_hooks: false
+  settings_json_schema:
     {
-      "label": "Organization ID",
-      "type": "text",
-      "name": "organization_id",
-      "validation": "required",
-    },
-    {
-      "label": "API Key",
-      "type": "text",
-      "name": "api_key",
-      "validation": "required",
-    },
-  ]
-  visible_properties: ["organization_id"]
+      'type': 'object',
+      'properties':
+        {
+          'project_id': { 'type': 'string' },
+          'credentials': { 'type': 'object' },
+        },
+      'required': ['project_id', 'credentials'],
+      'additionalProperties': false,
+    }
+  settings_form_schema:
+    [
+      {
+        'label': 'Google Cloud Project ID',
+        'type': 'text',
+        'name': 'project_id',
+        'validation': 'required',
+        'validationName': 'Project Id',
+      },
+      {
+        'label': 'Google Cloud Project Key File',
+        'type': 'textarea',
+        'name': 'credentials',
+        'validation': 'required|JSON',
+        'validationName': 'Credentials',
+        'validation-messages':
+          { 'JSON': 'Invalid JSON', 'required': 'Credentials is required' },
+      },
+    ]
+  visible_properties: ['project_id']
